# locha-mesh-chat

./: .eslintrc.js  .flowconfig  .gitignore  .travis.yml  App.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.json  assetsTransformer.js  conf_Linux.md  conf_Windows.md  conf_macOS.md  index.js  jsdoc.json  languages.js  package-lock.json  package.json  shim.js
.github/: FUNDING.yml  stale.yml
__Mocks__/: dataMock.js  index.js  mockStore.js  realmMock.js
__tests__/: ChatService-test.js  bitcoin-test.js  realm-test.js  utils-test.js
android/: build.gradle  gradle.properties  gradle.properties.in  gradlew  gradlew.bat  keystore.sh  settings.gradle
android/app/src/main/rust/: Cargo.toml  build.rs
android/app/src/main/rust/examples/: node.rs
android/app/src/main/rust/proto/: message.proto
android/app/src/main/rust/src/: handle.rs  jni.rs  lib.rs  message.proto  runtime.rs  util.rs
android/app/src/main/rust/src/handle/: resource_manager.rs
android/app/src/main/rust/src/handle/resource_manager/: blank.rs  imp.rs
android/app/src/main/rust/src/runtime/: chat_service.rs  sync_start_cond.rs
android/app/src/main/rust/src/runtime/chat_service/: config.rs  error.rs  events.rs  sync_start_cond.rs
android/app/src/main/rust/src/util/: conversion.rs  errors.rs  jni.rs  jni_cache.rs
coverage/: clover.xml  coverage-final.json  lcov.info
documents/: Acceso rápido - Acceso directo.lnk  AddContact.html  Bitcoin.html  Chat.Chat.html  Chat.html  ChatBody.html  ChatForm.html  Config.html  Contacts.html  DualComponent.html  EditName.html  EditPhoto.html  FloatButtons.html  HeaderComponent.html  InitialStep.html  InitialStep.js.html  MenuComponent.html  NotifService.html  Socket.html  components_FloatButton.js.html  components_Header.js.html  components_Menu.js.html  components_Spinner.js.html  (+24 more)
(+339 files in other folders)
