[package]
name = "locha-p2p"
version = "0.1.0"
authors = ["Locha Mesh Developers <contact@locha.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-std = { version = "1", features = ["unstable"] }
futures = "0.3"
jni = "0.17"
lazy_static = "1"
libp2p = "0.24"
log = "0.4"
parking_lot = "0.11"
android_logger = "0.9"

[dev-dependencies]
env_logger = "0.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
hex = "0.4"
clap = "2"

[features]
default = ["runtime-typecheck"]
runtime-typecheck = []
