[package]
name = "locha-p2p-jni"
version = "0.1.0"
authors = ["Locha Mesh Developers <contact@locha.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
locha-p2p = { version = "0.1", git = "https://github.com/btcven/locha-p2p"}
async-std = { version = "1", features = ["unstable"] }
jni = "0.17"
libp2p = "0.29"
log = "0.4"
parking_lot = "0.11"
android_logger = "0.9"
prost = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.4"
snap = "1"
base64 = "0.13"

[features]
default = ["runtime-typecheck"]
runtime-typecheck = []

[build-dependencies]
prost-build = "0.5"
